apps/hello-python/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-python
  namespace: links
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-python
  template:
    metadata:
      labels:
        app: hello-python
    spec:
      containers:
      - name: hello-python
        image: lufertony/hello-python:4.2
        ports:
        - containerPort: 9999
