apps/hello-python/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python
  namespace: links
spec:
  type: ClusterIP
  selector:
    app: hello-python
  ports:
    - port: 9999
      targetPort: 9999
      nodePort: 30999
