apps/hello-python/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-python
  namespace: links

spec:
  ingressClassName: traefik

  rules:
  - host: hello.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: hello-python

            port:
              number: 9999
